...
        let button = UIButton()
        button.setTitle("Войти", for: .normal)
        button.setTitleColor(.ypBlack, for: .normal)
        button.titleLabel?.font = .boldSystemFont(ofSize: 17)
        button.backgroundColor = .ypWhite
        button.layer.cornerRadius = 16
        button.accessibilityIdentifier = "Authenticate"
        
        return button
    }()
    private var oAuthToken = OAuth2TokenStorage.shared
    
    weak var delegate: SplashViewController?
...
