...
                 guard let self = self else { return }
                 self.presenter?.didUpdateProgressValue(webView.estimatedProgress)
             })
        
        configureWebView()
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
    }
    
    //    MARK: - Public Functions
    func load(request: URLRequest) {
        webView.load(request)
...
